@@ -4,3 +4,4 @@
       - Removed: Country and language forcing.
       - Added: Widget v6 support.
       - Updated: In case of uninstallation, all database tables created by the module will be deleted.
+      - Added: possibility of using either ID or Reference as order ID in export
